exports[`module "database/query" class Query #all() does not modify #snapshots 1`] = `Array []`;

exports[`module "database/query" class Query #all() resolves with the correct array of \`Model\` instances 1`] = `
Array [
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
  Test {},
]
`;

exports[`module "database/query" class Query #count() properly modifies #snapshots 1`] = `
Array [
  Array [
    "count",
    "* as countAll",
  ],
]
`;

exports[`module "database/query" class Query #count() removes all snapshots except for filter conditions 1`] = `
Array [
  Array [
    "count",
    "* as countAll",
  ],
]
`;

exports[`module "database/query" class Query #distinct() properly modifies #snapshots 1`] = `
Array [
  Array [
    "distinct",
    Array [
      "posts.title AS title",
    ],
  ],
  Array [
    "select",
    Array [],
  ],
]
`;

exports[`module "database/query" class Query #include() properly modifies #snapshots when using an array of strings 1`] = `
Array [
  Array [
    Array [
      "includeSelect",
      Array [
        "users.id AS user.id",
        "users.name AS user.name",
        "users.email AS user.email",
        "users.password AS user.password",
        "users.created_at AS user.createdAt",
        "users.updated_at AS user.updatedAt",
      ],
    ],
    Array [
      "leftOuterJoin",
      Array [
        "users",
        "posts.user_id",
        "=",
        "users.id",
      ],
    ],
  ],
  Object {
    "comments": Object {
      "attrs": Array [
        "id",
        "message",
        "edited",
        "userId",
        "postId",
        "createdAt",
        "updatedAt",
        "postId",
      ],
      "foreignKey": "post_id",
      "model": [Function],
      "through": undefined,
      "type": "hasMany",
    },
  },
]
`;

exports[`module "database/query" class Query #include() properly modifies #snapshots when using an object 1`] = `
Array [
  Array [
    Array [
      "includeSelect",
      Array [
        "users.id AS user.id",
        "users.name AS user.name",
      ],
    ],
    Array [
      "leftOuterJoin",
      Array [
        "users",
        "posts.user_id",
        "=",
        "users.id",
      ],
    ],
  ],
  Object {
    "comments": Object {
      "attrs": Array [
        "id",
        "name",
        "edited",
        "updatedAt",
        "postId",
      ],
      "foreignKey": "post_id",
      "model": [Function],
      "through": undefined,
      "type": "hasMany",
    },
  },
]
`;

exports[`module "database/query" class Query #include() resolves with the correct array of \`Model\` instances 1`] = `
Array [
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
  TestModel {},
]
`;

exports[`module "database/query" class Query #last() properly modifies #snapshots 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.id DESC",
  ],
  Array [
    "limit",
    1,
  ],
]
`;

exports[`module "database/query" class Query #last() respects order if one already exists 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.created_at DESC, tests.id DESC",
  ],
  Array [
    "limit",
    1,
  ],
]
`;

exports[`module "database/query" class Query #offset() does not modify #snapshots if #shouldCount 1`] = `Array []`;

exports[`module "database/query" class Query #offset() properly modifies #snapshots 1`] = `
Array [
  Array [
    "offset",
    10,
  ],
]
`;

exports[`module "database/query" class Query #order() defaults sort direction to \`ASC\` 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.id ASC",
  ],
]
`;

exports[`module "database/query" class Query #order() properly modifies #snapshots 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.id DESC",
  ],
]
`;

exports[`module "database/query" class Query #order() resolves with the correct array of \`Model\` instances 1`] = `
Array [
  100,
  99,
  98,
  97,
  96,
  95,
  94,
  93,
  92,
  91,
  90,
  89,
  88,
  87,
  86,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  75,
  74,
  73,
  72,
  71,
  70,
  69,
  68,
  67,
  66,
  65,
  64,
  63,
  62,
  61,
  60,
  59,
  58,
  57,
  56,
  55,
  54,
  53,
  52,
  51,
  50,
  49,
  48,
  47,
  46,
  45,
  44,
  43,
  42,
  41,
  40,
  39,
  38,
  37,
  36,
  35,
  34,
  33,
  32,
  31,
  30,
  29,
  28,
  27,
  26,
  25,
  24,
  23,
  22,
  21,
  20,
  19,
  18,
  17,
  16,
  15,
  14,
  13,
  12,
  11,
  10,
  9,
  8,
  7,
  6,
  5,
  4,
  3,
  2,
  1,
]
`;

exports[`module "database/query" class Query #scope() can be chained from other query methods 1`] = `
Array [
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
    ],
  ],
  Array [
    "limit",
    10,
  ],
  Array [
    "where",
    Object {
      "posts.is_public": true,
    },
    "isPublic",
  ],
]
`;

exports[`module "database/query" class Query #scope() can be chained to other query methods 1`] = `
Array [
  Array [
    "where",
    Object {
      "posts.is_public": true,
    },
    "isPublic",
  ],
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
    ],
  ],
  Array [
    "limit",
    10,
  ],
]
`;

exports[`module "database/query" class Query #select() properly modifies #snapshots 1`] = `
Array [
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
      "posts.created_at AS createdAt",
    ],
  ],
]
`;

exports[`module "database/query" class Query #unscope() removes a named scope from #snapshots 1`] = `
Array [
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
    ],
  ],
  Array [
    "limit",
    10,
  ],
]
`;
